# ros2-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  audio.py  main.py  requirements.txt
assets/docs/: INSTALL.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: CustomBoolean.msg  CustomDetection2D.msg  CustomTrackedObjects.msg
launch/: build_and_run.sh  project.launch.py
launch/scripts/: multi_node_launcher.sh  stt_agent_tts_launcher.sh
src/: streamlit_node.py
src/agent/: package.xml  setup.py
src/agent/agent/: agent_node.py
src/agent/launch/: agent.launch.py
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py
src/camera/config/: settings.yaml
src/camera/launch/: camera.launch.py
src/detector/: package.xml  setup.py
src/detector/config/: settings.yaml
src/detector/detector/: detector_node.py  predictor.py
src/detector/launch/: detector.launch.py
src/fall_alert/: setup.cfg  setup.py
src/fall_alert/config/: settings.yaml
src/fall_alert/fall_alert/: fall_alert_node.py
src/fall_alert/launch/: fall_alert.launch.py
src/fallalert/: package.xml
src/fallalert/fall_alert/: fall_alert_node.py
src/falldetector/: package.xml  setup.cfg  setup.py
src/falldetector/falldetector/: falldetector_node.py  model.py  temp.py
src/falldetector/launch/: falldetector.launch.py
src/image_publisher/: package.xml  setup.py
src/image_publisher/config/: settings.yaml
src/image_publisher/launch/: image_publisher.launch.py
src/regenerator/: package.xml  setup.cfg  setup.py
src/scheduler/: CMakeList.txt  package.xml  setup.py
src/scheduler/launch/: scheduler.launch.py
src/scheduler/scheduler/: scheduler_node.py
src/stt/: README.md  package.xml  setup.py
src/stt_node/: README.md  package.xml  setup.py
src/tracker/: package.xml  setup.py
src/tts/: package.xml  setup.py
src/tts_node/: package.xml  setup.py
src/video_publisher/: CMakeList.txt  package.xml  setup.py
(+28 files in other folders)
